--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
 <h1>Trying to know me!</h1>
+<h2>This is me.</h2>
 <img src="https://codd.cs.gsu.edu/~adhar2/WP/HW/HW01/mypic1.jpg" alt="my selfie pic">
 <h2>Hello everyone,I am Aramita Dhar.</h2>
 <h2>Three words that will describe me are hardworking, quick-learner and caring.</h2>
